--- a/cps/templates/readpdf.html
+++ b/cps/templates/readpdf.html
@@ -54,7 +54,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 
     <script src="{{ url_for('static', filename='js/libs/viewer.mjs') }}" type="module"></script>
 
-    <script type="module" src="{{ url_for('static', filename='js/doq/lib/doq.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/doq/addon/doq.js') }}"></script>
   </head>
 
   <body tabindex="1">
